--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,12 +22,17 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "otp-generator": "^4.0.1",
     "twilio": "^4.21.0"
