--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
+    "@types/next-auth": "^3.15.0",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
     "bcrypt": "^5.1.1",
@@ -33,8 +34,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "next-auth": "^4.24.6",
     "nodemailer": "^6.9.9",
     "otp-generator": "^4.0.1",
-    "twilio": "^4.21.0"
+    "twilio": "^4.22.0"
   }
 }
