--- a/back-end/package.json
+++ b/back-end/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^4.24.6",
     "nodemailer": "^6.9.9",
     "otp-generator": "^4.0.1",
+    "socket.io": "^4.7.4",
     "twilio": "^4.22.0"
   }
 }
