--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,10 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
+    "socket-client": "^1.0.0",
+    "socket.io-client": "^4.7.5",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
