--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "socket-client": "^1.0.0",
     "socket.io-client": "^4.7.5",
